--- a/_sass/pygments.scss
+++ b/_sass/pygments.scss
@@ -1,4 +1,7 @@
-.highlight pre { background-color: #272822; }
+$light-color: #f3f3f3;
+$quote-color: #e6db74;
+
+.highlight pre { color: $light-color; background-color: #272822; border-radius: 5px; overflow-x: auto; padding: 5px;}
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
@@ -11,6 +14,7 @@
 .highlight .cp { color: #75715e } /* Comment.Preproc */
 .highlight .c1 { color: #75715e } /* Comment.Single */
 .highlight .cs { color: #75715e } /* Comment.Special */
+.highlight .dl { color: $quote-color; } /* comment quotes */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
 .highlight .kc { color: #66d9ef } /* Keyword.Constant */
